SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

INCLUDE(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG release-1.11.0
)
FetchContent_MakeAvailable(googletest)
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gmock_SOURCE_DIR}/include)
ENABLE_TESTING()

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_FILES)
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}_test ${SRC_FILES})
TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME}_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}_test PRIVATE
  ${CMAKE_PROJECT_NAME}
  gtest_main
  gmock_main
  pthread
)
